[gd_scene load_steps=4 format=3 uid="uid://y4p4teybbmii"]

[ext_resource type="Script" path="res://Scenes/world/chunk/chunk.gd" id="1_1tugb"]
[ext_resource type="Texture2D" uid="uid://cab03fmqw22dy" path="res://Highlighted-Boxes.png" id="2_md1jt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_inhl0"]
size = Vector2(128, 128)

[node name="Chunk" type="Node2D"]
script = ExtResource("1_1tugb")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(64, 64)
scale = Vector2(8, 8)
texture = ExtResource("2_md1jt")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_inhl0")

[node name="DetectTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="occupied" from="." to="." method="_on_occupied"]
[connection signal="timeout" from="DetectTimer" to="." method="_on_detect_timer_timeout"]
